fix for button height on smaller devices

--- a/styles/likeme.css
+++ b/styles/likeme.css
@@ -141,6 +141,7 @@ button {
   cursor: pointer;
   width: 220px;
   height: 50px;
+  min-height: 50px;
   margin-top: 20px;
   box-shadow: 0px 10px 10px rgb(0 0 0 / 50%);
   border-radius: 8px;
